// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Camfil Header Default Component should render normal header adequately for desktop 1`] = `
<div class="header container desktop" ng-reflect-ng-class="desktop">
  <div class="row header__first">
    <div class="col-7 col-md-8 d-flex align-items-center">
      <camfil-user-links ng-reflect-device-type="desktop"></camfil-user-links>
    </div>
    <div class="col-5 col-md-4">
      <div class="header-utility">
        <div class="language-switch-container d-flex align-items-center">
          <camfil-language-switch data-testing-id="language-switch-desktop"></camfil-language-switch
          ><camfil-login-status data-testing-id="user-status-desktop"></camfil-login-status>
        </div>
      </div>
    </div>
  </div>
  <div class="row align-items-center header__second">
    <div class="col-9 col-md-6 col-lg-4 col-xl-3 logo-col d-flex">
      <button
        mat-stroked-button=""
        color="accent"
        class="mat-focus-indicator navbar-toggler mat-stroked-button mat-button-base mat-accent _mat-animation-noopable"
        ng-reflect-color="accent"
        aria-label="camfil.common.button.navbarCollapsed.menu.aria_label"
      >
        <span class="mat-button-wrapper"
          ><mat-icon
            role="img"
            class="mat-icon notranslate material-icons mat-icon-no-color"
            aria-hidden="true"
            data-mat-icon-type="font"
            >close</mat-icon
          >
          camfil.common.button.navbarCollapsed.close.text </span
        ><span
          matripple=""
          class="mat-ripple mat-button-ripple"
          ng-reflect-disabled="false"
          ng-reflect-centered="false"
          ng-reflect-trigger="[object HTMLButtonElement]"
        ></span
        ><span class="mat-button-focus-overlay"></span>
      </button>
      <div class="logo-wrapper">
        <ish-lazy-content-include
          includeid="camfil.include.header.logo.content.pagelet2-Include"
          ng-reflect-include-id="camfil.include.header.logo.con"
        ></ish-lazy-content-include>
      </div>
    </div>
    <div class="col-lg-5 col-xl-6 col-sm-12 search-container"></div>
    <div class="col-3 col-md-6 col-lg-3 col-xl-3 d-flex align-items-center justify-content-end">
      <camfil-mini-basket
        data-testing-id="mini-basket-desktop"
        ng-reflect-ng-class="d-md-block"
        class="d-md-block"
      ></camfil-mini-basket>
    </div>
  </div>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" ng-reflect-collapsed="false">
      <div role="navigation" class="main-navigation">
        <camfil-header-navigation></camfil-header-navigation>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Camfil Header Default Component should render normal header adequately for tablet devices 1`] = `
<div class="header container tablet" ng-reflect-ng-class="tablet">
  <div class="row header__first">
    <div class="col-7 col-md-8 d-flex align-items-center">
      <camfil-user-links ng-reflect-device-type="tablet"></camfil-user-links>
    </div>
    <div class="col-5 col-md-4">
      <div class="header-utility">
        <div class="language-switch-container d-flex align-items-center">
          <camfil-language-switch data-testing-id="language-switch-desktop"></camfil-language-switch
          ><camfil-login-status data-testing-id="user-status-desktop"></camfil-login-status>
        </div>
      </div>
    </div>
  </div>
  <div class="row align-items-center header__second">
    <div class="col-9 col-md-6 col-lg-4 col-xl-3 logo-col d-flex">
      <button
        mat-stroked-button=""
        color="accent"
        class="mat-focus-indicator navbar-toggler mat-stroked-button mat-button-base mat-accent _mat-animation-noopable"
        ng-reflect-color="accent"
        aria-label="camfil.common.button.navbarCollapsed.menu.aria_label"
      >
        <span class="mat-button-wrapper"
          ><mat-icon
            role="img"
            class="mat-icon notranslate material-icons mat-icon-no-color"
            aria-hidden="true"
            data-mat-icon-type="font"
            >close</mat-icon
          >
          camfil.common.button.navbarCollapsed.close.text </span
        ><span
          matripple=""
          class="mat-ripple mat-button-ripple"
          ng-reflect-disabled="false"
          ng-reflect-centered="false"
          ng-reflect-trigger="[object HTMLButtonElement]"
        ></span
        ><span class="mat-button-focus-overlay"></span>
      </button>
      <div class="logo-wrapper">
        <ish-lazy-content-include
          includeid="camfil.include.header.logo.content.pagelet2-Include"
          ng-reflect-include-id="camfil.include.header.logo.con"
        ></ish-lazy-content-include>
      </div>
    </div>
    <div class="col-lg-5 col-xl-6 col-sm-12 search-container"></div>
    <div class="col-3 col-md-6 col-lg-3 col-xl-3 d-flex align-items-center justify-content-end">
      <camfil-mini-basket
        data-testing-id="mini-basket-desktop"
        ng-reflect-ng-class="d-md-block"
        class="d-md-block"
      ></camfil-mini-basket>
    </div>
  </div>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" ng-reflect-collapsed="false">
      <div role="navigation" class="main-navigation">
        <camfil-header-navigation></camfil-header-navigation>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Camfil Header Default Component should render sticky header adequately for desktop 1`] = `
<div class="header container desktop" ng-reflect-ng-class="desktop">
  <div class="row align-items-center header__second">
    <div class="col-9 col-md-6 col-lg-4 col-xl-3 logo-col d-flex">
      <button
        mat-stroked-button=""
        color="accent"
        class="mat-focus-indicator navbar-toggler mat-stroked-button mat-button-base mat-accent _mat-animation-noopable"
        ng-reflect-color="accent"
        aria-label="camfil.common.button.navbarCollapsed.menu.aria_label"
      >
        <span class="mat-button-wrapper"
          ><mat-icon
            role="img"
            class="mat-icon notranslate material-icons mat-icon-no-color"
            aria-hidden="true"
            data-mat-icon-type="font"
            >close</mat-icon
          >
          camfil.common.button.navbarCollapsed.close.text </span
        ><span
          matripple=""
          class="mat-ripple mat-button-ripple"
          ng-reflect-disabled="false"
          ng-reflect-centered="false"
          ng-reflect-trigger="[object HTMLButtonElement]"
        ></span
        ><span class="mat-button-focus-overlay"></span>
      </button>
      <div class="logo-wrapper">
        <ish-lazy-content-include
          includeid="camfil.include.header.mobileLogo.content.pagelet2-Include"
          ng-reflect-include-id="camfil.include.header.mobileLo"
        ></ish-lazy-content-include>
      </div>
    </div>
  </div>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" ng-reflect-collapsed="false">
      <div role="navigation" class="main-navigation">
        <camfil-header-navigation></camfil-header-navigation>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Camfil Header Default Component should render sticky header adequately for mobile devices 1`] = `
<div class="header container mobile" ng-reflect-ng-class="mobile">
  <div class="row header__first">
    <div class="col-7 col-md-8 d-flex align-items-center"></div>
    <div class="col-5 col-md-4">
      <div class="header-utility">
        <div class="language-switch-container d-flex align-items-center">
          <camfil-login-status data-testing-id="user-status-desktop"></camfil-login-status>
        </div>
      </div>
    </div>
  </div>
  <div class="row align-items-center header__second">
    <div class="col-9 col-md-6 col-lg-4 col-xl-3 logo-col d-flex">
      <button
        mat-stroked-button=""
        color="accent"
        class="mat-focus-indicator navbar-toggler mat-stroked-button mat-button-base mat-accent _mat-animation-noopable"
        ng-reflect-color="accent"
        aria-label="camfil.common.button.navbarCollapsed.menu.aria_label"
      >
        <span class="mat-button-wrapper"
          ><mat-icon
            role="img"
            class="mat-icon notranslate material-icons mat-icon-no-color"
            aria-hidden="true"
            data-mat-icon-type="font"
            >menu</mat-icon
          >
          camfil.common.button.navbarCollapsed.text </span
        ><span
          matripple=""
          class="mat-ripple mat-button-ripple"
          ng-reflect-disabled="false"
          ng-reflect-centered="false"
          ng-reflect-trigger="[object HTMLButtonElement]"
        ></span
        ><span class="mat-button-focus-overlay"></span>
      </button>
      <div class="logo-wrapper">
        <ish-lazy-content-include
          includeid="camfil.include.header.mobileLogo.content.pagelet2-Include"
          ng-reflect-include-id="camfil.include.header.mobileLo"
        ></ish-lazy-content-include>
      </div>
    </div>
    <div class="col-lg-5 col-xl-6 col-sm-12 search-container">
      <div ng-reflect-collapsed="false">
        <camfil-search-box data-testing-id="search-box-desktop"></camfil-search-box>
      </div>
    </div>
    <div class="col-3 col-md-6 col-lg-3 col-xl-3 d-flex align-items-center justify-content-end">
      <camfil-mini-basket
        data-testing-id="mini-basket-desktop"
        ng-reflect-ng-class="d-lg-block"
        class="d-lg-block"
      ></camfil-mini-basket>
    </div>
  </div>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" ng-reflect-collapsed="true">
      <div role="navigation" class="main-navigation">
        <camfil-header-navigation></camfil-header-navigation
        ><camfil-user-links
          ng-reflect-device-type="mobile"
          ng-reflect-next-open-level-on-mobile-nav=""
        ></camfil-user-links>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Camfil Header Default Component should render sticky header adequately for tablet devices 1`] = `
<div class="header container tablet" ng-reflect-ng-class="tablet">
  <div class="row align-items-center header__second">
    <div class="col-9 col-md-6 col-lg-4 col-xl-3 logo-col d-flex">
      <button
        mat-stroked-button=""
        color="accent"
        class="mat-focus-indicator navbar-toggler mat-stroked-button mat-button-base mat-accent _mat-animation-noopable"
        ng-reflect-color="accent"
        aria-label="camfil.common.button.navbarCollapsed.menu.aria_label"
      >
        <span class="mat-button-wrapper"
          ><mat-icon
            role="img"
            class="mat-icon notranslate material-icons mat-icon-no-color"
            aria-hidden="true"
            data-mat-icon-type="font"
            >close</mat-icon
          >
          camfil.common.button.navbarCollapsed.close.text </span
        ><span
          matripple=""
          class="mat-ripple mat-button-ripple"
          ng-reflect-disabled="false"
          ng-reflect-centered="false"
          ng-reflect-trigger="[object HTMLButtonElement]"
        ></span
        ><span class="mat-button-focus-overlay"></span>
      </button>
      <div class="logo-wrapper">
        <ish-lazy-content-include
          includeid="camfil.include.header.mobileLogo.content.pagelet2-Include"
          ng-reflect-include-id="camfil.include.header.mobileLo"
        ></ish-lazy-content-include>
      </div>
    </div>
  </div>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" ng-reflect-collapsed="false">
      <div role="navigation" class="main-navigation">
        <camfil-header-navigation></camfil-header-navigation>
      </div>
    </nav>
  </div>
</div>
`;
